Add reportportal